Initial stab at a build and test workflow