@@ -32,21 +32,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.2</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -74,8 +64,6 @@
             <configuration>
               <excludes>
                 <exclude>uk/gov/cabinetoffice/bpdg/stw/external/hmrc/tradetariff/model/**/*.class</exclude>
-                <exclude>uk/gov/cabinetoffice/bpdg/stw/external/hmrc/tradetariff/DownstreamSystemException.class</exclude>
-                <exclude>uk/gov/cabinetoffice/bpdg/stw/external/hmrc/tradetariff/TradeTariffApiConfig.class</exclude>
               </excludes>
               <rules>
                 <rule>
